# human-human-control-competition-collaboration

./: LICENSE  README.md  game_theory_model_comparisons.py  main.py  plot_models.ipynb  pyproject.toml
src/: constants.py  control_model.py  dyad.py  helper_functions.py  model_functions.py  model_params.py  plot_functions.py
